app/src/styles/dashboard/musicSyncControls.sass
@import "../theme"

.musicSyncControlsContainer
    display: flex
    align-items: center
    justify-content: center
    .musicSyncControls
        margin-top: 4vh
        display: flex
        align-items: center
        justify-content: center
        flex-wrap: warp
        gap: 20px
        padding: 15px
        background: $card
        border-radius: 20px
        .field
            width: min-content


            &.button
                button
                    border: none
                    background: $light
                    border-radius: 20px
                    padding: 15px 20px
                    font-size: 18px
                    cursor: pointer
                    box-shadow: 0px 0px 10px $bg
                    transition: box-shadow .3s ease-in-out
                    &:hover
                        box-shadow: 0px 0px 20px 2px $bg
                    &:active
                        background: $lighter

            &.bpmDisplay
                .MuiTextField-root
                    white-space: nowrap
                    min-width: 80px

            &.timeOptions
                .MuiFormControlLabel-root
                    margin: 0
                    button
                        min-width: 60px
                        max-width: 60px

